--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -1,17 +1,8 @@
 shipkit {
     gitHub.repository = "mockito/shipkit"
-    gitHub.writeAuthUser = "mockito"
-    gitHub.writeAuthToken = System.getenv("GH_WRITE_TOKEN")
+    gitHub.writeAuthUser = "dummy" //TODO remove this line after we start consuming newer version
     gitHub.readOnlyAuthToken = "e7fe8fcdd6ffed5c38498c4c79b2a68e6f6ed1bb"
 
-    git.user = "Shipkit"
-    git.email = "<shipkit.org@gmail.com>"
-    git.releasableBranchRegex = "master|release/.+" // matches 'master', 'release/2.x', 'release/3.x', etc.
-
-    def buildNo = System.getenv("TRAVIS_BUILD_NUMBER")
-    git.commitMessagePostfix = buildNo? " by CI build $buildNo [ci skip-release]" : " [ci skip-release]"
-
-
-    team.developers = ['szczepiq:Szczepan Faber']
-    team.contributors = ['mstachniuk:Marcin Stachniuk', 'wwilk:Wojtek Wilk']
+    team.developers = ['szczepiq:Szczepan Faber', 'mstachniuk:Marcin Stachniuk',
+                       'wwilk:Wojtek Wilk', 'epeee:Erhard Pointl', 'NagRock:Maciej Kuster']
 }
