Fixed bug with travis template
For now, we cannot run testRelease there because it requires ciReleasePrepare.
Let's just move on :)

--- a/src/main/resources/template.travis.yml
+++ b/src/main/resources/template.travis.yml
@@ -19,7 +19,7 @@ branches:
 
 #build and test the release logic
 script:
-  - ./gradlew build testRelease -s -i
+  - ./gradlew build -s -i
 
 #check release criteria and make release if criteria are met!
 after_success:
