--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
         exclude module: "groovy-all"
     }
     testCompile "cglib:cglib-nodep:2.2.2"
+    testCompile "org.objenesis:objenesis:2.5"
     testCompile "commons-lang:commons-lang:2.4"
     testCompile gradleTestKit()
 }
