--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath "com.gradle.publish:plugin-publish-plugin:0.9.6"
+        //TODO: Needs to remove gradle.plugin prefix in next PR and bump the version
         classpath "gradle.plugin.org.shipkit:shipkit:0.8.99"
         classpath 'ru.vyarus:gradle-animalsniffer-plugin:1.3.0'
     }
@@ -31,7 +32,7 @@ repositories {
     maven { url "https://plugins.gradle.org/m2/" }
 }
 
-group = 'gradle.plugin.org.shipkit'
+group = 'org.shipkit'
 
 dependencies {
     compile gradleApi()
@@ -57,7 +58,7 @@ pluginBundle {
     tags = ['shipkit', 'continuous delivery', 'release']
 
     mavenCoordinates {
-        groupId = 'gradle.plugin.org.shipkit'
+        groupId = 'org.shipkit'
         artifactId = 'shipkit'
     }
 }
