--- a/src/main/resources/META-INF/gradle-plugins/org.shipkit.java-library.properties
+++ b/src/main/resources/META-INF/gradle-plugins/org.shipkit.java-library.properties
@@ -1,1 +1,1 @@
-implementation-class=org.shipkit.internal.gradle.JavaLibraryPlugin
+implementation-class=org.shipkit.internal.gradle.java.JavaLibraryPlugin
