--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,4 @@ install:
  - true
 
 script:
-  - ./gradlew build -PcheckJava6Compatibility -s -i
-
-after_success:
-  - ./gradlew assertReleaseNeeded && ./gradlew ciReleasePrepare && ./gradlew travisRelease -s
+  - ./gradlew build -PcheckJava6Compatibility -s -i && ./gradlew ciPerformRelease
