--- a/e2eTests/build.gradle
+++ b/e2eTests/build.gradle
@@ -3,5 +3,5 @@ apply plugin: 'base' // for clean task, TODO ms: push it to the plugin, make 'ch
 apply plugin: 'org.shipkit.e2e-test'
 
 // TODO: WW when new version of E2ETestingPlugin is released, uncomment these lines
-//e2eTest.create("https://github.com/mockito/shipkit-example")
-//e2eTest.create("https://github.com/mockito/mockito")
+//e2eTest.addRepository("https://github.com/mockito/shipkit-example")
+//e2eTest.addRepository("https://github.com/mockito/mockito")
