--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ install:
  - true
 
 script:
-  - ./gradlew build -PcheckJava6Compatibility -s -i && ./gradlew ciPerformRelease -d
+  - ./gradlew build -PcheckJava6Compatibility -s -i && ./gradlew ciPerformRelease
