--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ install:
 
 script:
   - ./gradlew build -PcheckJava6Compatibility --daemon -s -i && ./gradlew ciPerformRelease
+
+after_success:
+  - ./gradlew upgradeDownstream
