--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // First, apply the publishing plugin
 buildscript {
     repositories {
-        mavenLocal()        // for e2e test
+        mavenLocal()        // for downstream test
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
