--- a/gradle/upgrade-downstream.gradle
+++ b/gradle/upgrade-downstream.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'org.shipkit.upgrade-downstream'
+apply plugin: 'org.shipkit.ci-upgrade-downstream'
 
 upgradeDownstream{
     repositories = ['mockito/shipkit-example']
