--- a/testDownstream/build.gradle
+++ b/testDownstream/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'base' // for clean task, TODO ms: push it to the plugin, make 'check' depend on downstream test
 
 
-// TODO: WW when new version of TestDownstreamPlugin is released, uncomment these lines
-//apply plugin: 'org.shipkit.test-downstream'
+apply plugin: 'org.shipkit.test-downstream'
 
-//testDownstream.addRepository("https://github.com/mockito/shipkit-example")
-//testDownstream.addRepository("https://github.com/mockito/mockito")
+testDownstream.addRepository("https://github.com/mockito/shipkit-example")
+testDownstream.addRepository("https://github.com/mockito/mockito")
