Improved Gradle releasing plugin
 - Change the plugin hierarchy so that we can apply plugins in submodules. Now the user can publish Gradle plugin from a submodule.
 - Instead of applying "com.gradle.plugin-publish" directly to root, we are letting the user to do it. Shipkit will automatically configure every submodule that uses "com.gradle.plugin-publish" plugin. This is the same strategy that we have for "java" plugin.

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ apply from: 'gradle/java6-compatibility.gradle'
 apply from: 'gradle/precommit.gradle'
 
 apply plugin: 'org.shipkit.gradle-plugin'
+apply plugin: 'com.gradle.plugin-publish'
 apply from: 'gradle/upgrade-downstream.gradle'
 
 sourceCompatibility = 1.6
