move additional classes + adjust shipkit.gradle

--- a/subprojects/shipkit/shipkit.gradle
+++ b/subprojects/shipkit/shipkit.gradle
@@ -4,11 +4,10 @@ apply plugin: 'idea'
 apply plugin: 'groovy'
 apply plugin: 'checkstyle'
 apply plugin: 'codenarc'
-
 apply from: "$rootDir/gradle/java6-compatibility.gradle"
 apply from: "$rootDir/gradle/precommit.gradle"
 
-apply plugin: 'org.shipkit.gradle-plugin'
+apply plugin: 'com.gradle.plugin-publish'
 apply from: "$rootDir/gradle/upgrade-downstream.gradle"
 
 checkstyle {
