--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -8,9 +8,7 @@ shipkit {
 
 afterEvaluate {
     //TODO let's create a property for this setting in 'shipkit' extension
-    tasks.updateReleaseNotes.publicationRepository = "https://plugins.gradle.org/plugin/org.shipkit.java"
-
-    tasks.check.dependsOn validatePlugins
+    project.rootProject.tasks.updateReleaseNotes.publicationRepository = "https://plugins.gradle.org/plugin/org.shipkit.java"
 }
 
 apply plugin: 'org.shipkit.upgrade-dependency'
