fix group name for root project and make sure that the name of the rootproject is shipkit, reenable upgrade-downstream

--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,14 @@ apply plugin: 'org.shipkit.gradle-plugin'
 
 apply from: "$rootDir/gradle/upgrade-downstream.gradle"
 
+allprojects {
+    group = 'org.shipkit'
+}
+
 subprojects {
     repositories {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
     }
-    group = 'org.shipkit'
 }
 
