--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ cache:
 
 language: java
 
-jdk:
-  - oraclejdk8
+matrix:
+  include:
+    - jdk: oraclejdk8
+      env: SHIPKIT_REGRESSION_TESTS=quick
 
 #don't build tags
 branches:
@@ -23,3 +25,4 @@ install:
 
 script:
   - ./gradlew build testDownstream -PcheckJava6Compatibility --daemon -s -i && ./gradlew ciPerformRelease
+
