--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ language: java
 matrix:
   include:
     - jdk: oraclejdk8
+      # Sanity regression tests with major supported Gradle versions
       env: SHIPKIT_REGRESSION_TESTS=quick
 
 #don't build tags
