--- a/subprojects/shipkit/shipkit.gradle
+++ b/subprojects/shipkit/shipkit.gradle
@@ -25,7 +25,7 @@ dependencies {
     testCompile("org.spockframework:spock-core:1.1-groovy-2.4") {
         exclude module: "groovy-all"
     }
-    testCompile 'info.solidsoft.spock:spock-global-unroll:0.5.1'
+    testCompile 'info.solidsoft.spock:spock-global-unroll:0.5.1'    //automatically unroll Spock tests (if appropriate)
     testCompile "net.bytebuddy:byte-buddy:1.7.1"
     testCompile "org.objenesis:objenesis:2.5"
     testCompile "commons-lang:commons-lang:2.4"
