Initial design for #427
Does not compile but should lead the way :)

--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -4,11 +4,8 @@ shipkit {
 
     team.developers = ['szczepiq:Szczepan Faber', 'mstachniuk:Marcin Stachniuk',
                        'wwilk:Wojtek Wilk', 'epeee:Erhard Pointl', 'NagRock:Maciej Kuster']
-}
 
-afterEvaluate {
-    //TODO let's create a property for this setting in 'shipkit' extension
-    project.rootProject.tasks.updateReleaseNotes.publicationRepository = "https://plugins.gradle.org/plugin/org.shipkit.java"
+    releaseNotes.publicationRepository = "https://plugins.gradle.org/plugin/org.shipkit.java"
 }
 
 apply plugin: 'org.shipkit.upgrade-dependency'
