move upgrade-downstream to subproject and rename rootproject (in order to be able to use composite buids)

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,8 @@
 include "shipkit"
 include "testDownstream"
 
+rootProject.name = "shipkit-root"
+
 rootProject.children.each { project ->
     String projectDirName = "subprojects/$project.name"
     project.projectDir = new File(settingsDir, projectDirName)
