Make project combileable
Currently this "workaround" is needed because shipkit with that new extension isn't published.
If it's released we can change the implementation.

--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -5,7 +5,13 @@ shipkit {
     team.developers = ['szczepiq:Szczepan Faber', 'mstachniuk:Marcin Stachniuk',
                        'wwilk:Wojtek Wilk', 'epeee:Erhard Pointl', 'NagRock:Maciej Kuster']
 
-    releaseNotes.publicationRepository = "https://plugins.gradle.org/plugin/org.shipkit.java"
+    // Comment in after the next version of shipkit is released
+    //releaseNotes.publicationRepository = "https://plugins.gradle.org/plugin/org.shipkit.java"
+}
+
+// Remove me after the next version of shipkit is released
+afterEvaluate {
+    project.rootProject.tasks.updateReleaseNotes.publicationRepository = "https://plugins.gradle.org/plugin/org.shipkit.java"
 }
 
 apply plugin: 'org.shipkit.upgrade-dependency'
