Uploading Gists for downstreamTests' log files enabled

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,3 +35,8 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
+after_success:
+  - ./gradlew uploadGists
+
+after_failure:
+  - ./gradlew uploadGists
