--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -12,3 +12,6 @@ afterEvaluate {
 }
 
 apply plugin: 'org.shipkit.upgrade-dependency'
+
+apply plugin: 'org.shipkit.upload-gists'
+project.tasks.uploadGists.filesToUpload = project.fileTree("subprojects/testDownstream/build").filter {it.name.endsWith(".log")}
