--- a/subprojects/shipkit/shipkit.gradle
+++ b/subprojects/shipkit/shipkit.gradle
@@ -8,8 +8,7 @@ apply plugin: 'com.gradle.plugin-publish'
 
 apply from: "$rootDir/gradle/upgrade-downstream.gradle"
 
-//TODO: WW uncomment when GradlePluginArtifactUrlResolver is released
-//apply plugin: 'org.shipkit.compare-publications'
+apply plugin: 'org.shipkit.compare-publications'
 
 checkstyle {
     configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
