Prevent noise from test tasks in info level build

--- a/subprojects/shipkit/shipkit.gradle
+++ b/subprojects/shipkit/shipkit.gradle
@@ -35,6 +35,12 @@ dependencies {
     testCompile gradleTestKit()
 }
 
+test {
+    testLogging {
+        info.events = ["failed", "skipped"]
+    }
+}
+
 pluginBundle {
     website = 'http://shipkit.org/'
     vcsUrl = 'https://github.com/mockito/shipkit'
