--- a/subprojects/shipkit/shipkit.gradle
+++ b/subprojects/shipkit/shipkit.gradle
@@ -39,6 +39,14 @@ test {
     testLogging {
         info.events = ["failed", "skipped"]
     }
+    afterSuite { desc, result ->
+        if (!desc.parent)
+            logger.info("Test summary: " +
+                "${result.testCount} tests " +
+                "(${result.successfulTestCount} succeeded, " +
+                "${result.failedTestCount} failed, " +
+                "${result.skippedTestCount} skipped)")
+    }
 }
 
 pluginBundle {
