--- a/subprojects/shipkit/src/main/resources/template.travis.yml
+++ b/subprojects/shipkit/src/main/resources/template.travis.yml
@@ -7,6 +7,19 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
+# Remove often changing files to prevent cache re-upload on no changes in dependencies
+before_cache:
+# pom, xml and jar files are known not to change
+# assume non-whitelisted extensions are changing
+# (this will include .lock, .bin, .metadata and potential future additions to gradle's caches folder)
+  - find $HOME/.gradle/caches -type f -not \( -iname \*.pom -o -iname \*.jar -o -iname \*.xml \) -delete
+# jar files which change
+  - rm -fr $HOME/.gradle/caches/*/workerMain/gradle-worker.jar
+# xml files which change
+  - find $HOME/.gradle/caches/modules-2 -name ivy.xml -delete
+# remove left over empty directories
+  - find $HOME/.gradle/caches -type d -empty -delete
+
 language: java
 
 jdk:
