--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -5,7 +5,7 @@ shipkit {
     team.developers = ['mockitoguy:Szczepan Faber', 'mstachniuk:Marcin Stachniuk',
                        'wwilk:Wojtek Wilk', 'epeee:Erhard Pointl', 'NagRock:Maciej Kuster']
 
-    releaseNotes.publicationRepository = "https://plugins.gradle.org/plugin/org.shipkit.java"
+    releaseNotes.publicationRepository = "https://plugins.gradle.org/plugin/org.shipkit.java/"
 }
 
 apply plugin: 'org.shipkit.upgrade-dependency'
