remove --daemon from travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ install:
  - true
 
 script:
-  - ./gradlew build testDownstream -PcheckJava8Compatibility --daemon -s && ./gradlew ciPerformRelease -s
+  - ./gradlew build testDownstream -PcheckJava8Compatibility -s && ./gradlew ciPerformRelease -s
