adjust _JAVA_OPTIONS

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,8 @@ branches:
 install:
  - true
 
+before_script:
+  - _JAVA_OPTIONS="-Xmx1024m -Xms128m"
+
 script:
   - ./gradlew build testDownstream -PcheckJava8Compatibility -s && ./gradlew ciPerformRelease -s
