--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
  - true
 
 before_script:
-  - _JAVA_OPTIONS="-Xmx1024m -Xms128m"
+  - _JAVA_OPTIONS=
 
 script:
   - ./gradlew build testDownstream -PcheckJava8Compatibility -s && ./gradlew ciPerformRelease -s
