--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ allprojects {
 
     tasks.withType(Test) {
         minHeapSize = '128m'
+        maxHeapSize = '1024m'
         testLogging {
             //This way Spock/Groovy power asserts will be visible in the build log
             //Very useful - you don't have to look at the test results to debug a test failure
