Temporary comment out testDownstreams task 2

--- a/gradle/upgrade-downstream.gradle
+++ b/gradle/upgrade-downstream.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'org.shipkit.ci-upgrade-downstream'
+//apply plugin: 'org.shipkit.ci-upgrade-downstream'
 
 upgradeDownstream {
     repositories = ['mockito/shipkit-example', 'mockito/shipkit']
