Temporary disable test downstreams

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include "shipkit"
-include "testDownstream"
+//TODO uncommend after https://github.com/mockito/shipkit/pull/800 is merged
+//include "testDownstream"
 
 rootProject.name = "shipkit-root"
 
