--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,4 @@ before_script:
   - _JAVA_OPTIONS=
 
 script:
-# temporary disabled testDownstream
-#  - ./gradlew build testDownstream -PcheckJava8Compatibility -s && ./gradlew ciPerformRelease -s
-  - ./gradlew build -PcheckJava8Compatibility -s && ./gradlew ciPerformRelease -s
+  - ./gradlew build testDownstream -PcheckJava8Compatibility -s && ./gradlew ciPerformRelease -s
