--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ before_script:
 
 script:
   - ./gradlew build testDownstream -PcheckJava8Compatibility -s && ./gradlew ciPerformRelease -s
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
