--- a/subprojects/shipkit/shipkit.gradle
+++ b/subprojects/shipkit/shipkit.gradle
@@ -100,7 +100,9 @@ task codeCoverageReport(type:JacocoReport) {
 
     reports {
         xml.enabled true
+        xml.destination "${buildDir}/reports/jacoco/report.xml"
         html.enabled false
+        csv.enabled false
     }
 }
 
