--- a/subprojects/shipkit/shipkit.gradle
+++ b/subprojects/shipkit/shipkit.gradle
@@ -96,7 +96,7 @@ jacoco {
 
 task codeCoverageReport(type:JacocoReport) {
     executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
-    sourceSets sourceSets.test
+    sourceSets sourceSets.main
 
     reports {
         xml.enabled true
