--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,15 @@ branches:
   except:
   - /^v\d/
 
-#Below skips the installation step completely (https://docs.travis-ci.com/user/customizing-the-build/#Skipping-the-Installation-Step)
 install:
- - true
+  - export ANDROID_HOME=~/android-sdk-linux
+  - wget -q "https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip" -O android-sdk-tools.zip
+  - unzip -q android-sdk-tools.zip -d ${ANDROID_HOME}
+  - rm android-sdk-tools.zip
+  - PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}/platform-tools
+  - yes | sdkmanager --update
+  - yes | sdkmanager --licenses
+  - sdkmanager "tools" "platform-tools" "build-tools;28.0.3" "platforms;android-28" > /dev/null
 
 before_script:
   - _JAVA_OPTIONS=
