--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,10 @@ install:
   - export ANDROID_HOME=~/android-sdk-linux
   - wget -q "https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip" -O android-sdk-tools.zip
   - unzip -q android-sdk-tools.zip -d ${ANDROID_HOME}
-  - rm android-sdk-tools.zip
   - PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}/platform-tools
   - yes | sdkmanager --update
   - yes | sdkmanager --licenses
-  - sdkmanager "tools" "platform-tools" "build-tools;28.0.3" "platforms;android-28" > /dev/null
+  - sdkmanager "tools" "ndk-bundle" "build-tools;29.0.0" "platforms;android-29" > /dev/null
 
 before_script:
   - _JAVA_OPTIONS=
