--- a/subprojects/shipkit/src/main/resources/META-INF/gradle-plugins/org.shipkit.android-publish.properties
+++ b/subprojects/shipkit/src/main/resources/META-INF/gradle-plugins/org.shipkit.android-publish.properties
@@ -1,1 +1,1 @@
-implementation-class=org.shipkit.internal.gradle.android.AndroidPublishPlugin
+implementation-class=org.shipkit.internal.gradle.android.AndroidLibraryPublishPlugin
