--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ dist: trusty
 
 matrix:
   include:
-    - jdk: oraclejdk8
+    - jdk: openjdk8
       # Sanity regression tests with major supported Gradle versions
       env: SHIPKIT_REGRESSION_TESTS=quick
 
