--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: java
 
 matrix:
   include:
-    - jdk: oraclejdk8
+    - jdk: openjdk8
       # Sanity regression tests with major supported Gradle versions
       env: SHIPKIT_REGRESSION_TESTS=quick
 
