--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url 'https://maven.google.com' }
     }
 
     tasks.withType(Test) {
