--- a/subprojects/shipkit/shipkit.gradle
+++ b/subprojects/shipkit/shipkit.gradle
@@ -22,9 +22,9 @@ dependencies {
 
     compile "com.github.cliftonlabs:json-simple:2.1.2"
     compile 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-    compile "com.gradle.publish:plugin-publish-plugin:0.9.10"
+    compile 'com.gradle.publish:plugin-publish-plugin:0.9.10'
     compile 'com.googlecode.java-diff-utils:diffutils:1.3.0'
-    compile 'com.github.technoir42:aar-publish-plugin:1.0.2'
+    compile 'com.android.tools.build:gradle:3.6.0-beta05'
 
     testCompile("org.spockframework:spock-core:1.3-groovy-2.4") {
         exclude module: "groovy-all"
